feat: Use DHIS2 specific Locale class (#22819)
* feat: DHIS2 own locale class

* chore: switch to DHIS2 Locale class

* fix: failing tests, handle outdates codes

* fix: mark region as nullable for more convinience as it is nullable

* fix: unit tests

* feat: Add script to locale controller (#22820)

* Fix locale controller

* Remove duplicative validation code

* Add language tag to locales (#22822)

* fix: Correctly resolve resource bundle (#22823)

* Add language tag to locales

* Fix resource bundle handling

* Linting

---------

Co-authored-by: Jason Pickering <jason@dhis2.org>